# job-manager

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b3b2c9c3c29d_create_tables.py
jobmanager/: main.py
jobmanager/core/: config.py  db.py  deps.py  security.py
jobmanager/crud/: account.py  job.py  user.py
jobmanager/models/: account.py  all.py  dbmodels.py  job.py  user.py
jobmanager/routes/: account.py  accounts.py  auth.py  jobs.py  system.py  users.py
jobmanager/scripts/: init_db.py
test/: conftest.py
test/routes/: test_accounts.py  test_auth.py  test_jobs.py  test_system.py  test_users.py
test/utils/: db.py  user.py
