[project]
name = "jobmanager"
version = "0.1.0"
description = "Simple REST API built on FastAPI"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "alembic<2.0.0,>=1.16.5",
    "fastapi[standard]<1.0.0,>=0.116.1",
    "bcrypt==4.0.1",
    "passlib<2.0.0,>=1.7.4",
    "pydantic>=2.11.7",
    "psycopg2-binary<3.0.0,>=2.9.10",
    "pydantic-settings<3.0.0,>=2.10.1",
    "PyJWT<3.0.0,>=2.10.1",
    "sqlmodel<1.0.0,>=0.0.24",
]

[project.optional-dependencies]
tests = [
  'pytest>=8.0.0',
]

[project.urls]
Repository = "https://github.com/dalonsog/job-manager"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
